deploy.yml
kind: Service
apiVersion: v1
metadata:
  name: alcohol-service
spec:
  selector:
    app: alcohol-service
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30084
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alcohol-service
spec:
  selector:
    matchLabels:
      app: alcohol-service
  replicas: 1
  template:
    metadata:
      labels:
        app: alcohol-service
    spec:
      containers:
        - name: alcohol-service
          image: alcohol-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
